   obsproc_prep/sorc/prepobs_prepacqc.fd/pspl.f90
   obsproc_prep/sorc/prepobs_prepacqc.fd/sub2mem_mer.f
   obsproc_prep/sorc/prepobs_prepacqc.fd/sub2mem_um.f
   obsproc_prep/sorc/prepobs_prepacqc.fd/tranQCflags.f
   obsproc_prep/sorc/prepobs_prepanow.fd/makefile
   obsproc_prep/sorc/prepobs_prepanow.fd/prepanow.f
   obsproc_prep/sorc/prepobs_prepdata.fd/inc_w3unpkb7.inc
   obsproc_prep/sorc/prepobs_prepdata.fd/iw3unpbf.f
   obsproc_prep/sorc/prepobs_prepdata.fd/makefile
   obsproc_prep/sorc/prepobs_prepdata.fd/prepdata.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3atovsunp.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3cnvxtovs.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3rtovsunp.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3unpkb7.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3xtovseds.f
   obsproc_prep/sorc/prepobs_prepdata.fd/w3xtovsmnd.f
   obsproc_prep/sorc/prepobs_prepdata.fd/wordlength.f
   obsproc_prep/sorc/prepobs_prevents.fd/gblevents_cdas.f
   obsproc_prep/sorc/prepobs_prevents.fd/makefile
   obsproc_prep/sorc/prepobs_prevents.fd/prevents.f
   obsproc_prep/sorc/prepobs_profcqc.fd/makefile
   obsproc_prep/sorc/prepobs_profcqc.fd/profcqc.f
   obsproc_prep/sorc/syndat_syndata.fd/makefile
   obsproc_prep/sorc/syndat_syndata.fd/syndata.f
 M obsproc_prep/sorc/build.sh
   obsproc_prep/sorc/clean.sh
   obsproc_prep/sorc/install.sh
 M obsproc_prep/sorc/load_libs.rc
   obsproc_prep/sorc/README.build
   obsproc_prep/sorc/setlibs.rc
   obsproc_prep/ush/prepobs_cqcbufr.sh
   obsproc_prep/ush/prepobs_cqcvad.sh
 A obsproc_prep/ush/getges_driver.sh
 M obsproc_prep/ush/getges.sh
   obsproc_prep/ush/getges_sig.sh
   obsproc_prep/ush/prepobs_glerladj.sh
 M obsproc_prep/ush/prepobs_makeprepbufr.sh
   obsproc_prep/ush/prepobs_oiqcbufr.sh
   obsproc_prep/ush/prepobs_prepacqc.sh
   obsproc_prep/ush/prepobs_prevents.sh
   obsproc_prep/ush/prepobs_profcqc.sh
   obsproc_prep/ush/prepobs_syndata.sh
( A - added,  M - modified, D - deleted)


 USH script changes:
   getges_driver.sh: